ukuma/ukuma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: monitoring
  labels:
    app.kubernetes.io/name: uptime-kuma
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  strategy:
    type: Recreate      
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:latest
          imagePullPolicy: Always
          ports:
            - name: uptime-kuma
              containerPort: 3001
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
            requests:
              cpu: 250m
              memory: "134217728"
          volumeMounts:
            -  name: uptime-kuma-longhorn-volume
               mountPath: /app/data
      volumes:
        - name: uptime-kuma-longhorn-volume
          persistentVolumeClaim:
            claimName: uptime-kuma-longhorn-pvc
      restartPolicy: Always
