ukuma/ukuma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: uptime-kuma
      port: 3001
      targetPort: 3001
