ukuma/ukuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-chain-noauth@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
    - host: ukuma.taius.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
